Bind data from api to the user list

--- a/src/user-data-provider.html
+++ b/src/user-data-provider.html
@@ -38,7 +38,7 @@
       }
       _handleResponse(event) {
         this.data = event.detail.response.result;
-        console.log(this.data[0].firstName + " " + this.data[0].lastName);
+        console.log(this.data);
       }
 
       _getHeaders() {
