--- a/src/user-list.html
+++ b/src/user-list.html
@@ -25,7 +25,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
-    <user-data-provider></user-data-provider>
+    <user-data-provider
+        data="{{dataFromApi}}">
+    </user-data-provider>
 
     <paper-card heading="Users list">
     <div class="card-content">
@@ -43,30 +45,30 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           on-selection-changed="_handleSelectionChanged"
           total-elements="[[totalElements]]"
           total-pages="[[totalPages]]"
-
-          data="[[data]]">
+          data="[[dataFromApi]]">
         <paper-datatable-api-column
-            header="title" property="title"
-            filter
-            choices='[{"key": "banana","label": "banana"},{"key": "apple","label": "apple"},{"key": "orange","label": "orange"},{"key":"strawberry","label": "strawberry"}]'
-            sortable
+            header="id"
+            property="id"
             draggable-column
-            hideable>
+            filter>
           <template>
             <span>{{value}}</span>
           </template>
         </paper-datatable-api-column>
-        <paper-datatable-api-column header="calories" property="calories" draggable-column filter>
+        <paper-datatable-api-column
+            header="First Name"
+            property="firstName"
+            draggable-column
+            filter>
           <template>
             <span>{{value}}</span>
           </template>
         </paper-datatable-api-column>
-        <paper-datatable-api-column header="fat" property="fat" draggable-column filter>
-          <template>
-            <span>{{value}}</span>
-          </template>
-        </paper-datatable-api-column>
-        <paper-datatable-api-column header="carbs" property="carbs" draggable-column filter>
+        <paper-datatable-api-column
+            header="Last Name"
+            property="lastName"
+            draggable-column
+            filter>
           <template>
             <span>{{value}}</span>
           </template>
@@ -91,77 +93,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         return {
           sortProperty: {
             type: String,
-          },
-          data: {
-            type: Array,
-            value: [
-              {
-                id: 0,
-                title: 'Frozen yogurt',
-                calories: 159,
-                fat: 6,
-                carbs: 24,
-                protein: 4,
-                sodium: 87,
-                calcium: .14,
-                iron: .01
-              },
-              {
-                id: 1,
-                title: 'Ice cream sandwich',
-                calories: 237,
-                fat: 9,
-                carbs: 37,
-                protein: 4.3,
-                sodium: 129,
-                calcium: .08,
-                iron: .01
-              },
-              {
-                id: 2,
-                title: 'Eclair',
-                calories: 262,
-                fat: 16,
-                carbs: 24,
-                protein: 6,
-                sodium: 337,
-                calcium: .06,
-                iron: .07
-              },
-              {
-                id: 3,
-                title: 'Cupcake',
-                calories: 305,
-                fat: 3.7,
-                carbs: 67,
-                protein: 4.3,
-                sodium: 413,
-                calcium: .03,
-                iron: .08
-              },
-              {
-                id: 4,
-                title: 'Gingerbread',
-                calories: 356,
-                fat: 16,
-                carbs: 49,
-                protein: 3.9,
-                sodium: 327,
-                calcium: .07,
-                iron: .16
-              },
-              {
-                id: 5,
-                title: 'Jelly bean',
-                calories: 373,
-                fat: 0,
-                carbs: 94,
-                protein: 0,
-                sodium: 50,
-                calcium: 0,
-                iron: 0
-              }
-            ]
           }
         }
       }
