--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -44,6 +44,52 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       iron-icon:hover{
         fill: var(--google-yellow-700);
       }
+
+      paper-button.custom {
+        --paper-button-ink-color: var(--paper-pink-a200);
+        /* These could also be individually defined for each of the
+					specific css classes, but we'll just do it once as an example */
+        --paper-button-flat-keyboard-focus: {
+          background-color: var(--paper-pink-a200);
+          color: white !important;
+        };
+        --paper-button-raised-keyboard-focus: {
+          background-color: var(--paper-pink-a200) !important;
+          color: white !important;
+        };
+      }
+      paper-button.custom:hover {
+        background-color: var(--paper-indigo-100);
+      }
+      paper-button.pink {
+        color: var(--paper-pink-a200);
+
+      }
+      paper-button.indigo {
+        background-color: var(--paper-indigo-500);
+        color: white;
+        --paper-button-raised-keyboard-focus: {
+          background-color: var(--paper-pink-a200) !important;
+          color: white !important;
+        };
+      }
+      paper-button.green {
+        background-color: var(--paper-green-500);
+        color: white;
+      }
+      paper-button.green[active] {
+        background-color: var(--paper-red-500);
+      }
+      paper-button.blue {
+        background-color: var(--google-blue-700);
+        color: white;
+      }
+      paper-button.blue[active] {
+        background-color: var(--paper-purple-900);
+      }
+      paper-button.disabled {
+        color: white;
+      }
     </style>
   </template>
 </dom-module>
