--- a/src/user-list.html
+++ b/src/user-list.html
@@ -26,7 +26,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
 
     <user-data-provider
-        data="{{dataFromApi}}">
+        data="{{dataFromApi}}"
+        sort-property="[[sortProperty]]">
     </user-data-provider>
 
     <paper-card heading="Users list">
@@ -50,6 +51,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             header="id"
             property="id"
             draggable-column
+            sortable
             filter>
           <template>
             <span>{{value}}</span>
@@ -59,6 +61,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             header="First Name"
             property="firstName"
             draggable-column
+            sortable
             filter>
           <template>
             <span>{{value}}</span>
