--- a/src/my-app.html
+++ b/src/my-app.html
@@ -110,9 +110,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <app-toolbar>Menu</app-toolbar>
           <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
             <a name="user-list" href="[[rootPath]]user-list">User List</a>
-            <a name="test-page" href="[[rootPath]]test-page">Test page</a>
-            <a name="ajax-request" href="[[rootPath]]ajax-request">ajax-request</a>
-            <a name="get-ajax-data" href="[[rootPath]]get-ajax-data">get-ajax-data</a>
+            <a name="test-page" href="[[rootPath]]test-page">Group List</a>
           </iron-selector>
         </app-drawer>
 
@@ -121,7 +119,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <app-header slot="header" condenses reveals effects="waterfall">
             <app-toolbar>
               <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
-              <div main-title>My App</div>
+              <div main-title>Proveng super admin panel</div>
               <google-signin></google-signin>
             </app-toolbar>
           </app-header>
